Bug 303072 - Crash when adding a contact to a kolab imap resource
Summary: Crash when adding a contact to a kolab imap resource
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Kolab Resource (other bugs)
Version First Reported In: 4.8
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-05 17:11 UTC by Jon Skanes
Modified: 2013-09-25 12:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (4.76 KB, text/plain)
2012-08-10 18:49 UTC, Matija Šuklje
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jon Skanes 2012-07-05 17:11:51 UTC
Application: akonadi_kolabproxy_resource (4.8)
KDE Platform Version: 4.8.4 (4.8.4)
Qt Version: 4.8.1
Operating System: Linux 3.2.0-26-generic-pae i686
Distribution: Ubuntu 12.04 LTS

-- Information about the crash:
- What I was doing when the application crashed:

I had attempted to add a new address book entry to a kolab imap resource.  I also received this notification:

Could not determine the UID for the newly created message on the server

The imap server in question is dovcot.

-- Backtrace:
Application: Kolab of type Kolab Groupware Server (akonadi_kolabproxy_resource), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[KCrash Handler]
#7  KolabProxyResource::retrieveItems (this=0x8a7a6e8, collection=...) at ../../../resources/kolabproxy/kolabproxyresource.cpp:186
#8  0xb7661695 in Akonadi::ResourceBasePrivate::slotSynchronizeCollection (this=0x8a78fd8, col=...) at ../../akonadi/resourcebase.cpp:693
#9  0xb76641aa in Akonadi::ResourceBase::qt_static_metacall (_o=0x8a7a6e8, _c=QMetaObject::InvokeMetaMethod, _id=17, _a=0xbfd3ee88) at ./moc_resourcebase.cpp:125
#10 0xb67126b1 in QMetaObject::activate (sender=0x8a6f838, m=0xb7763718, local_signal_index=2, argv=0xbfd3ee88) at kernel/qobject.cpp:3547
#11 0xb7666055 in Akonadi::ResourceScheduler::executeCollectionSync (this=0x8a6f838, _t1=...) at ./resourcescheduler_p.moc:161
#12 0xb766c64f in Akonadi::ResourceScheduler::executeNext (this=0x8a6f838) at ../../akonadi/resourcescheduler.cpp:299
#13 0xb766d8b0 in Akonadi::ResourceScheduler::qt_static_metacall (_o=0x8a6f838, _c=QMetaObject::InvokeMetaMethod, _id=17, _a=0x8acd7b8) at ./resourcescheduler_p.moc:99
#14 0xb670dc01 in QMetaCallEvent::placeMetaCall (this=0x8a2a648, object=0x8a6f838) at kernel/qobject.cpp:525
#15 0xb6716c7b in QObject::event (this=0x8a6f838, e=0x8a2a648) at kernel/qobject.cpp:1195
#16 0xb5be6ed4 in notify_helper (e=0x8a2a648, receiver=0x8a6f838, this=0x891d8a0) at kernel/qapplication.cpp:4559
#17 QApplicationPrivate::notify_helper (this=0x891d8a0, receiver=0x8a6f838, e=0x8a2a648) at kernel/qapplication.cpp:4531
#18 0xb5bec30d in QApplication::notify (this=0x8a2a648, receiver=0x8a6f838, e=0x8a2a648) at kernel/qapplication.cpp:4288
#19 0xb6d1b401 in KApplication::notify (this=0xbfd3f800, receiver=0x8a6f838, event=0x8a2a648) at ../../kdeui/kernel/kapplication.cpp:311
#20 0xb66fb97e in QCoreApplication::notifyInternal (this=0xbfd3f800, receiver=0x8a6f838, event=0x8a2a648) at kernel/qcoreapplication.cpp:876
#21 0xb66ffad8 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#22 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x88fc130) at kernel/qcoreapplication.cpp:1500
#23 0xb66ffe0c in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1393
#24 0xb672e494 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#25 postEventSourceDispatch (s=0x891ed80) at kernel/qeventdispatcher_glib.cpp:279
#26 0xb4e8dd86 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#27 0xb4e8e125 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#28 0xb4e8e201 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#29 0xb672e887 in QEventDispatcherGlib::processEvents (this=0x88fcea0, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#30 0xb5c9faaa in QGuiEventDispatcherGlib::processEvents (this=0x88fcea0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#31 0xb66fa50d in QEventLoop::processEvents (this=0xbfd3f764, flags=...) at kernel/qeventloop.cpp:149
#32 0xb66fa7a9 in QEventLoop::exec (this=0xbfd3f764, flags=...) at kernel/qeventloop.cpp:204
#33 0xb66ffeba in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#34 0xb5be4a74 in QApplication::exec () at kernel/qapplication.cpp:3820
#35 0xb765e281 in Akonadi::ResourceBase::init (r=0x8a7a6e8) at ../../akonadi/resourcebase.cpp:412
#36 0x08066307 in Akonadi::ResourceBase::init<KolabProxyResource> (argc=3, argv=0xbfd3f8d4) at /usr/include/akonadi/resourcebase.h:188
#37 0x08059d8b in main (argc=3, argv=0xbfd3f8d4) at ../../../resources/kolabproxy/kolabproxyresource.cpp:841

Reported using DrKonqi
Comment 1 Matija Šuklje 2012-08-10 18:49:43 UTC
Created attachment 73094 [details]
New crash information added by DrKonqi

akonadi_kolabproxy_resource (4.8) on KDE Platform 4.8.3 (4.8.3) using Qt 4.8.1

- What I was doing when the application crashed:

In KAddressBook I tried to add a group to a Kolab resource and it crashed the Akonadi resource.

I had to restart the whole Akonadi to get rid of the crashing, as from that point onward it occured everytime Kolab synced.

-- Backtrace (Reduced):
#6  KolabProxyResource::retrieveItems (this=0x1fe2e00, collection=<optimized out>) at /var/tmp/portage/kde-base/kdepim-runtime-4.8.3-r2/work/kdepim-runtime-4.8.3/resources/kolabproxy/kolabproxyresource.cpp:186
#7  0x00007f82c85b5d77 in Akonadi::ResourceBasePrivate::slotSynchronizeCollection (this=0x1fe2830, col=<optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-4.8.3/work/kdepimlibs-4.8.3/akonadi/resourcebase.cpp:693
#8  0x00007f82c85b84fd in Akonadi::ResourceBase::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-4.8.3/work/kdepimlibs-4.8.3_build/akonadi/moc_resourcebase.cpp:125
[...]
#10 0x00007f82c85ba125 in Akonadi::ResourceScheduler::executeCollectionSync (this=<optimized out>, _t1=<optimized out>) at /var/tmp/portage/kde-base/kdepimlibs-4.8.3/work/kdepimlibs-4.8.3_build/akonadi/resourcescheduler_p.moc:161
#11 0x00007f82c85bf354 in Akonadi::ResourceScheduler::executeNext (this=0x20ffac0) at /var/tmp/portage/kde-base/kdepimlibs-4.8.3/work/kdepimlibs-4.8.3/akonadi/resourcescheduler.cpp:299
Comment 2 Christian Mollekopf 2013-07-15 15:51:05 UTC
Git commit 7d7d41f48024d85a4caff5272fb8f213796fa7f3 by Christian Mollekopf.
Committed on 15/07/2013 at 15:48.
Pushed by cmollekopf into branch 'master'.

Always check if handler is valid.

M  +12   -6    resources/kolabproxy/kolabproxyresource.cpp

http://commits.kde.org/kdepim-runtime/7d7d41f48024d85a4caff5272fb8f213796fa7f3
Comment 3 Christian Mollekopf 2013-09-25 12:08:06 UTC
Git commit 46d43df322bcecb2c8a57cb2e9a1d0cdf6748bac by Christian Mollekopf.
Committed on 15/07/2013 at 15:48.
Pushed by cmollekopf into branch 'kolab/integration/4.10.2'.

Always check if handler is valid.

M  +12   -6    resources/kolabproxy/kolabproxyresource.cpp

http://commits.kde.org/kdepim-runtime/46d43df322bcecb2c8a57cb2e9a1d0cdf6748bac