Always check if handler is valid.

BUG: 303072